# onrobot_rg2_v2

./: .gitignore
onrobot_rg2_driver/: CMakeLists.txt  package.xml
onrobot_rg2_driver/src/: gripper_interface.cpp  hardware_interface.cpp
onrobot_rg2_v2_description/: CMakeLists.txt  README.md  package.xml
onrobot_rg2_v2_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
onrobot_rg2_v2_description/meshes/: base_link.stl  body_link_1.stl  finger1_inner_knuckle_link_1.stl  finger1_link_1.stl  finger1_tip_link_1.stl  finger2_inner_knuckle_link_1.stl  finger2_link_1.stl  finger2_tip_link_1.stl
onrobot_rg2_v2_description/urdf/: materials.xacro  onrobot_rg2_v2.gazebo  onrobot_rg2_v2.trans  onrobot_rg2_v2.xacro  rg2_v2.urdf.xacro  rg2_v2_macro.xacro
onrobot_rg2_v2_driver/: CMakeLists.txt  package.xml
onrobot_rg2_v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
onrobot_rg2_v2_moveit_config/config/: fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  onrobot_rg2_v2.srdf  rg2_v2.ros2_control.xacro  rg2_v2.srdf  rg2_v2.urdf.xacro  ros2_controllers.yaml  ros_controllers.yaml
onrobot_rg2_v2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch.py  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch  moveit_rviz.launch.py  ompl_planning_pipeline.launch.xml  planning_context.launch  (+13 more)
(+3 files in other folders)
